# ocv_task

./: CMakeLists.txt  CMakeLists.txt.user.c049781  README.md  behavior.cpp  behavior.h  img_handler.cpp  img_handler.h  main.cpp  terminal.cpp  terminal.h
